--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js -- --fix"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
